--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
     <h1>Objects</h1>
+    <h2>new title</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero quis fugiat quisquam, et commodi recusandae ducimus,
      alias odio ab laborum in dolorum voluptates dolore incidunt saepe fugit eius nihil perferendis.</p>
     <script src="./js/script.js"></script>
